Modified to include depth support. Now draws a cross and returns coordinates of the closest point in a frame

--- a/c/examples/CMakeLists.txt
+++ b/c/examples/CMakeLists.txt
@@ -10,10 +10,13 @@ find_package(USB REQUIRED)
 include_directories(${USB_INCLUDE_DIRS})
 
 add_executable(glview glview.c)
+#add_executable(depth depth.c)
 find_library (PTHREAD pthread)
 IF(APPLE)
   set(CMAKE_EXE_LINKER_FLAGS "-framework OpenGL -framework GLUT")
   target_link_libraries(glview freenect)
+  #target_link_libraries(depth freenect)
 ELSE()
   target_link_libraries(glview freenect GL GLU glut m)
+  #target_link_libraries(depth freenect GL GLU glut m)
 ENDIF()
