--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -3,6 +3,7 @@
 ######################################################################################
 
 add_executable(glview glview.c)
+add_executable(chris chris.c)
 
 # Mac just has everything already
 if(APPLE)
@@ -15,7 +16,10 @@ else()
   find_package(GLUT REQUIRED)
   include_directories(${OPENGL_INCLUDE_DIRS} ${GLUT_INCLUDE_DIRS} ${USB_INCLUDE_DIRS})
   target_link_libraries(glview freenect ${OPENGL_LIBRARIES} ${GLUT_LIBRARY} ${CMAKE_THREAD_LIBS_INIT} m)
+  target_link_libraries(chris freenect ${OPENGL_LIBRARIES} ${GLUT_LIBRARY} ${CMAKE_THREAD_LIBS_INIT} m)
 endif()
 
 install (TARGETS glview
+  DESTINATION bin)
+install (TARGETS chris
   DESTINATION bin)
